--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ img {
 }
 
 /*========BASE========*/
+html {
+  scroll-behavior: smooth;
+}
 body {
   font: 400 1rem 'DM sans', sans-serif;
   color: var(--text-color);
@@ -63,6 +66,14 @@ body {
     hsla(var(--hue), 65%, 88%, 0.34)
   );
 }
+.divider2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
+  );
+}
 .container {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -74,17 +85,27 @@ body {
 .section {
   padding: 5rem 0;
 }
-
+.section .title {
+  margin-bottom: 1rem;
+}
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 /*========LAYOUT========*/
 #header {
   border-bottom: 1px solid #e4e4e4;
   margin: bottom 2rem;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   background: var(--body-color);
+}
+#header.scroll {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
 }
 main {
   margin-top: calc(var(--header-height) + 2rem);
@@ -129,12 +150,35 @@ nav ul li a:hover::after {
   width: 100%;
   transition: width 0.2s;
 }
+
+/*NAV MENU - ESTADO ANTES DA TRANSITION*/
 nav .menu {
   opacity: 0;
   visibility: hidden;
+  top: -20rem;
+  transition: 0.2s;
+}
+nav .menu ul {
+  display: none;
+}
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -1.5rem;
+  right: 1.5rem;
+  transition: 0.2s;
 }
 
-/*Menu aberto*/
+/*NAV MENU ABERTO*/
+nav.show .icon-close {
+  top: 1.5rem;
+  visibility: visible;
+  opacity: 1;
+}
+nav.show .menu ul {
+  display: grid;
+}
 nav.show .menu {
   opacity: 1;
   visibility: visible;
@@ -184,10 +228,152 @@ nav.show ul.grid {
   margin-right: 1.5rem;
   text-align: center;
 }
-#home .text h1 {
-  margin-bottom: 1rem;
-}
+
 #home .text p {
   margin-bottom: 2rem;
   max-width: 100%;
+}
+
+/*========ABOUT========*/
+#about {
+  background: white;
+}
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+#about .image img {
+  position: relative;
+}
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+/*========SERVICES========*/
+#services span {
+  color: hsla(159, 36%, 57%, 1);
+  font-weight: bold;
+}
+#services header {
+  margin-bottom: 4rem;
+}
+/*CARDS*/
+.cards.grid {
+  gap: 1.5rem;
+}
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
+  text-align: center;
+}
+.card i {
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+.cards .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+/*========TESTIMONIALS========*/
+#testimonials {
+  background: white;
+}
+#testimonials blockquote {
+  padding: 2rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 0.25rem;
+}
+#testimonials header {
+  margin-bottom: 0;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+#testimonials .container {
+  margin-left: 0;
+  margin-right: 0;
+}
+#testimonials blockquote p span {
+  font-weight: 700;
+  font-family: serif;
+  font-size: 3rem;
+  position: absolute;
+  left: -1.875rem;
+  top: -0.7rem;
+  color: var(--base-color);
+}
+#testimonials blockquote p {
+  position: relative;
+  text-indent: 1.875rem;
+  margin-bottom: 1.5rem;
+  color: var(--title-color);
+}
+#testimonials cite img {
+  width: 2rem;
+  height: 2rem;
+  object-fit: cover;
+  clip-path: circle();
+  margin-right: 0.5rem;
+}
+#testimonials cite {
+  display: flex;
+  align-items: center;
+  font-size: normal;
+}
+/*========TESTIMONIALS SWIPER========*/
+.swiper {
+  max-width: 600px;
+  height: 300px;
+}
+.swiper-slide {
+  height: auto;
+  padding: 4rem 1rem;
+}
+.swiper-pagination-bullet-active {
+  background: var(--base-color);
+}
+
+/*========CONTACT========*/
+#contact .grid {
+  gap: 4rem;
+}
+#contact .text p {
+  margin-bottom: 2rem;
+}
+#contact .button i,
+#contact ul li i {
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+}
+#contact ul.grid {
+  gap: 2rem;
+}
+#contact ul li {
+  display: flex;
+  align-items: center;
+}
+#contact ul li i {
+  color: var(--base-color);
 }
