--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?73twqu');
-  src:  url('fonts/icomoon.eot?73twqu#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?73twqu') format('truetype'),
-    url('fonts/icomoon.woff?73twqu') format('woff'),
-    url('fonts/icomoon.svg?73twqu#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?86ih43');
+  src:  url('fonts/icomoon.eot?86ih43#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?86ih43') format('truetype'),
+    url('fonts/icomoon.woff?86ih43') format('woff'),
+    url('fonts/icomoon.svg?86ih43#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
