--- a/style.css
+++ b/style.css
@@ -405,10 +405,29 @@ footer .socialLinks a {
 .returnButton {
   position: fixed;
   cursor: pointer;
-  bottom: 5rem;
-  right: 2rem;
+  /* bottom: 5rem; //posição ao lado dos links sociais
+  right: 2rem; */
+  bottom: 1rem;
+  right: 1rem;
+  padding: 0.5rem;
+  clip-path: circle();
   color: var(--text-color-light);
+  background: var(--base-color);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  transform: translateY(100%);
 }
 .returnButton i {
   font-size: 1.5rem;
+  color: var(--text-color-light);
+}
+.visible {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+.returnButton.footerPosition {
+  right: 2rem;
+  bottom: 4.5rem;
 }
